mini/nginx/nginxdeployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: default
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
        - name: container
          image: 'nginx:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "250Mi"
              cpu: "500m"
            limits:
              memory: "250Mi"
              cpu: "500m"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
